--- a/my_website/about.html
+++ b/my_website/about.html
@@ -7,9 +7,8 @@
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    
       <a href="about.html">about</a>
-    </a>
+        <h1>This is my About Page!</h1>
 	  </body>
 	</html>
 
