--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -9,10 +9,12 @@
     <a href="portfolio.html">Portfolio</a>
      <a href="about.html">about</a>
       <h1>This is Sergio's Portfolio Page!</h1>
+      
     <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
+       <a href="http://ai2.appinventor.mit.edu/?locale=en#4650496569769984">Calculator</a>
 	  </body>
 	</html>
 
