--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -15,6 +15,7 @@
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
        <a href="http://ai2.appinventor.mit.edu/?locale=en#4650496569769984">Calculator</a>
+        <a href="https://docs.google.com/document/d/1FhT5k8BY3p-9ICcBnJLtJXE9DPg4b_SATkIguo_18Rg/edit">Interactive Fiction</a>
 	  </body>
 	</html>
 
